<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".fragments.RealtimeDataFragment">

            <com.github.florent37.shapeofview.shapes.ArcView
                android:id="@+id/diagonalLayout"
                style="@style/AppTopView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shape_arc_height="@dimen/app_top_view_arc_height"
                app:shape_arc_position="bottom">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_top_view_gradient"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:background="@drawable/virus"
                        android:contentDescription="@string/image_cd_covid_virus" />

                    <ImageView
                        android:id="@+id/iv_home_dr_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="56dp"
                        android:contentDescription="@string/image_cd_covid_icon_2"
                        android:src="@drawable/dr_corona_1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@id/iv_home_dr_icon"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/covid_precaution_2"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/textSize_24" />
                </RelativeLayout>
            </com.github.florent37.shapeofview.shapes.ArcView>


            <TextView
                android:id="@+id/tv_symtomps_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/label_symptoms"
                android:textColor="@color/text_color_dark"
                android:textSize="@dimen/textSize_18"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/diagonalLayout" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_symptom_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginEnd="@dimen/margin_8"
                app:cardCornerRadius="@dimen/card_view_corner_radius"
                app:cardElevation="@dimen/card_view_elevation"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/cv_symptom_2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_symtomps_title">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_16"
                    android:drawableTop="@drawable/headache"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:gravity="center_horizontal"
                    android:text="@string/symptom_title_1"
                    android:textColor="@color/text_color_light"
                    android:textSize="@dimen/textSize_14"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/diagonalLayout" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_symptom_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginEnd="@dimen/margin_8"
                app:cardCornerRadius="@dimen/card_view_corner_radius"
                app:cardElevation="@dimen/card_view_elevation"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/cv_symptom_3"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/cv_symptom_1"
                app:layout_constraintTop_toBottomOf="@id/tv_symtomps_title">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_16"
                    android:drawableTop="@drawable/caugh"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:gravity="center_horizontal"
                    android:text="@string/symptom_title_2"
                    android:textColor="@color/text_color_light"
                    android:textSize="@dimen/textSize_14"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/diagonalLayout" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_symptom_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginEnd="@dimen/margin_16"
                app:cardCornerRadius="@dimen/card_view_corner_radius"
                app:cardElevation="@dimen/card_view_elevation"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/cv_symptom_2"
                app:layout_constraintTop_toBottomOf="@id/tv_symtomps_title">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_16"
                    android:drawableTop="@drawable/fever"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:gravity="center_horizontal"
                    android:text="@string/symptom_title_3"
                    android:textColor="@color/text_color_light"
                    android:textSize="@dimen/textSize_14"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/diagonalLayout" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_prevention_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/label_prevention"
                android:textColor="@color/text_color_dark"
                android:textSize="@dimen/textSize_18"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cv_symptom_1" />


            <androidx.cardview.widget.CardView
                android:id="@+id/cv_prevention_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginEnd="@dimen/margin_16"
                app:cardCornerRadius="@dimen/card_view_corner_radius"
                app:cardElevation="@dimen/card_view_elevation"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_prevention_title">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/padding_8">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/image_cd_prevention_icon"
                        android:src="@drawable/wear_mask" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="-20dp"
                        android:layout_marginTop="@dimen/margin_8"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_prevention_title_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:fontFamily="sans-serif-condensed-medium"
                            android:text="@string/prevention_title_1"
                            android:textColor="@color/text_color_dark"
                            android:textSize="@dimen/textSize_18" />

                        <TextView
                            android:id="@+id/tv_prevention_description_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_8"
                            android:fontFamily="sans-serif-condensed-medium"
                            android:text="@string/prevention_description_1"
                            android:textColor="@color/text_color_dark"
                            android:textSize="@dimen/textSize_10" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_prevention_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_16"
                app:cardCornerRadius="@dimen/card_view_corner_radius"
                app:cardElevation="@dimen/card_view_elevation"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cv_prevention_1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/padding_8">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/image_cd_prevention_icon"
                        android:src="@drawable/wash_hands" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="-20dp"
                        android:layout_marginTop="@dimen/margin_8"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_prevention_title_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:fontFamily="sans-serif-condensed-medium"
                            android:text="@string/prevention_title_2"
                            android:textColor="@color/text_color_dark"
                            android:textSize="@dimen/textSize_18" />

                        <TextView
                            android:id="@+id/tv_prevention_description_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:fontFamily="sans-serif-condensed-medium"
                            android:text="@string/prevention_description_2"
                            android:textColor="@color/text_color_dark"
                            android:textSize="@dimen/textSize_10" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>