<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="coviddata"
            type="com.example.covid_19.pojo.CovidData" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.RealtimeDataFragment">

        <com.github.florent37.shapeofview.shapes.ArcView
            android:id="@+id/diagonalLayout"
            style="@style/AppTopView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shape_arc_height="@dimen/app_top_view_arc_height"
            app:shape_arc_position="bottom">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_top_view_gradient"
                android:paddingStart="@dimen/padding_16"
                android:paddingEnd="@dimen/padding_16">


                <ImageView
                    android:id="@+id/iv_information"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="@dimen/margin_16"
                    android:contentDescription="@string/image_cd_information_screen"
                    android:paddingTop="@dimen/padding_16"
                    android:src="@drawable/ic_forward" />


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:background="@drawable/virus"
                    android:contentDescription="@string/image_cd_covid_virus" />

                <ImageView
                    android:id="@+id/iv_home_dr_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="56dp"
                    android:contentDescription="@string/image_cd_covid_icon_1"
                    android:src="@drawable/dr_corona_2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/iv_home_dr_icon"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/covid_precaution_1"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/textSize_24" />
            </RelativeLayout>
        </com.github.florent37.shapeofview.shapes.ArcView>

        <TextView
            android:id="@+id/tv_case_update_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/label_case_update"
            android:textColor="@color/text_color_dark"
            android:textSize="@dimen/textSize_18"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/diagonalLayout" />


        <androidx.cardview.widget.CardView
            android:id="@+id/cv_infected_count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_16"
            app:cardCornerRadius="@dimen/card_view_corner_radius"
            app:cardElevation="@dimen/card_view_elevation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_case_update_title">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/image_cd_count_indicator"
                    android:src="@drawable/ic_circle_orange" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="9"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@={coviddata.cases}"
                        android:textColor="#FF3D00"
                        android:textSize="@dimen/textSize_28" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_infected"
                        android:textColor="@color/text_color_light"
                        android:textSize="@dimen/textSize_14" />

                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_16"
            app:cardCornerRadius="@dimen/card_view_corner_radius"
            app:cardElevation="@dimen/card_view_elevation"
            app:layout_constraintEnd_toStartOf="@+id/cardView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_infected_count"
            app:layout_constraintVertical_chainStyle="spread">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/image_cd_count_indicator"
                    android:src="@drawable/ic_circle_red" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@={coviddata.deaths}"
                    android:textColor="#FB2E77"
                    android:textSize="@dimen/textSize_28" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/label_deaths"
                    android:textColor="@color/text_color_light"
                    android:textSize="@dimen/textSize_14" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_16"
            app:cardCornerRadius="@dimen/card_view_corner_radius"
            app:cardElevation="@dimen/card_view_elevation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cardView2"
            app:layout_constraintTop_toBottomOf="@id/cv_infected_count"
            app:layout_constraintVertical_chainStyle="spread">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/image_cd_count_indicator"
                    android:src="@drawable/ic_circle_green" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@={coviddata.recovered}"
                    android:textColor="#0E9855"
                    android:textSize="@dimen/textSize_28" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/label_recovered"
                    android:textColor="@color/text_color_light"
                    android:textSize="@dimen/textSize_14" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/margin_8"
            android:text="@{@string/label_last_updated(coviddata.updated)}"
            android:textColor="@color/text_color_light"
            android:textSize="@dimen/textSize_10"
            app:layout_constraintBottom_toTopOf="@id/efab_donate_to_help"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/efab_donate_to_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-medium"
            android:padding="@dimen/padding_4"
            android:text="@string/action_donate_to_help"
            android:textColor="@android:color/white"
            android:textSize="@dimen/textSize_12"
            app:backgroundTint="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/progress_circular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="@dimen/card_view_elevation"
            android:indeterminate="false"
            android:minWidth="50dp"
            android:minHeight="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>